buildroot: Add method to apply patch on platform
.patch files can now be applied specifically to different platforms by
appeding the platform name to their file extension. For example
some-patch.patch.gfrg200 will only be applied on gfrg200.

Change-Id: I402ce237c0aa0811829852fccbfa3ddd5504d900

--- a/package/Makefile.package.in
+++ b/package/Makefile.package.in
@@ -500,7 +500,7 @@ $(BUILD_DIR)/%/.stamp_patched:
 	$(Q)( \
 	if test -d $($(PKG)_DIR_PREFIX)/$(RAWNAME); then \
 	  if test "$(wildcard $($(PKG)_DIR_PREFIX)/$(RAWNAME)/$(NAMEVER)*.patch*)"; then \
-	    support/scripts/apply-patches.sh $(@D) $($(PKG)_DIR_PREFIX)/$(RAWNAME) $(NAMEVER)\*.patch $(NAMEVER)\*.patch.$(ARCH) || exit 1; \
+	    support/scripts/apply-patches.sh $(@D) $($(PKG)_DIR_PREFIX)/$(RAWNAME) $(NAMEVER)\*.patch $(NAMEVER)\*.patch.$(ARCH) $(NAMEVER)\*.patch.$(BR2_TARGET_GENERIC_PLATFORM_NAME) || exit 1; \
 	  else \
 	    support/scripts/apply-patches.sh $(@D) $($(PKG)_DIR_PREFIX)/$(RAWNAME) $(RAWNAME)\*.patch $(RAWNAME)\*.patch.$(ARCH) || exit 1; \
 	    if test -d $($(PKG)_DIR_PREFIX)/$(RAWNAME)/$(NAMEVER); then \
