Add worktree in build directory with --detach
Build script will check out worktree as detached HEAD. The tree is a
snapshot of the current topic branch in git project. Topic branch
checkout will not be blocked. Stale worktrees will be pruned in the next
full build.

Change-Id: I9690bc9739d835e6e60d5dd8942213bcd3c17542

--- a/package/Makefile.package.in
+++ b/package/Makefile.package.in
@@ -179,7 +179,7 @@ define DOWNLOAD_REPO
 		 rm -rf $($(PKG)_BASE_NAME) && \
 		 cd $(TOPDIR)/../$($(PKG)_REPO_PATH) && \
 		 git worktree prune && \
-		 git worktree add -f $(BUILD_DIR)/$($(PKG)_BASE_NAME) \
+		 git worktree add -f --detach $(BUILD_DIR)/$($(PKG)_BASE_NAME) \
 			"$$(git rev-parse --abbrev-ref HEAD)"; \
 		) \
 	fi
