Adding GoogleTest to replace out of date GMock and GTest packages. Remove GMock and GTest.
Change-Id: I1eb6e2dfe6be74d714ea1aa83ce7f63bdcfe4d9f

--- a/package/Config.in
+++ b/package/Config.in
@@ -406,7 +406,7 @@ source "package/libargtable2/Config.in"
 source "package/argp-standalone/Config.in"
 source "package/boost/Config.in"
 source "package/grpc/Config.in"
-source "package/gtest/Config.in"
+source "package/googletest/Config.in"
 source "package/libatomic_ops/Config.in"
 source "package/libcap/Config.in"
 source "package/libdaemon/Config.in"
