--- a/configs/gfmn100_defconfig
+++ b/configs/gfmn100_defconfig
@@ -25,7 +25,6 @@ BR2_PACKAGE_TOYBOX=y
 BR2_PACKAGE_GZIP=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_MTD=y
-BR2_PACKAGE_PYTHON=y
 BR2_PACKAGE_PYTHON_SSL=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
 BR2_PACKAGE_PY_DNS=y
@@ -65,7 +64,7 @@ BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_ART2=y
 BR2_PACKAGE_BACKPORTS_CUSTOM=y
 BR2_PACKAGE_BACKPORTS_CUSTOM_DEFCONFIG="gfmn100_defconfig"
-BR2_TARGET_ROOTFS_TAR=n
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_V4=y
 BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/qualcomm/gfmn100"
