--- a/package/google/google_mcastcapture/Config.in
+++ b/package/google/google_mcastcapture/Config.in
@@ -5,5 +5,6 @@ config BR2_PACKAGE_GOOGLE_MCASTCAPTURE
         select BR2_PACKAGE_LIBCURL
         select BR2_PACKAGE_PROTOBUF
         select BR2_PACKAGE_LIBEVENT
+        select BR2_PACKAGE_LIBXML2
         help
           Builds the mcastcapture sagesrv binary and libptsindex.so library
