--- a/package/Config.in
+++ b/package/Config.in
@@ -297,6 +297,7 @@ source "package/libgpg-error/Config.in"
 source "package/libnss/Config.in"
 source "package/libsodium/Config.in"
 source "package/openssl/Config.in"
+source "package/trousers/Config.in"
 endmenu
 
 menu "Database"
