--- a/configs/gfsc100_newkernel-4.1_defconfig
+++ b/configs/gfsc100_newkernel-4.1_defconfig
@@ -46,6 +46,7 @@ BR2_PACKAGE_PY_MONOTIME=y
 BR2_PACKAGE_PYTHON_CRYPTO=y
 BR2_PACKAGE_OPENSSL_BIN=y
 BR2_PACKAGE_OPENSSL_OCF=y
+BR2_PACKAGE_TROUSERS=y
 BR2_PACKAGE_LIBNETFILTER_CONNTRACK=y
 BR2_PACKAGE_LIBCLI=y
 BR2_PACKAGE_BRIDGE_UTILS=y
