--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -36,6 +36,7 @@ BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
