Replace old libelf with more recent elfutils from upstream.
Change-Id: Iee1e95141ab71650af4fe0be8a0994d273a1220e

--- a/package/Config.in
+++ b/package/Config.in
@@ -406,12 +406,12 @@ source "package/fftw/Config.in"
 source "package/libargtable2/Config.in"
 source "package/argp-standalone/Config.in"
 source "package/boost/Config.in"
+source "package/elfutils/Config.in"
 source "package/grpc/Config.in"
 source "package/googletest/Config.in"
 source "package/libatomic_ops/Config.in"
 source "package/libcap/Config.in"
 source "package/libdaemon/Config.in"
-source "package/libelf/Config.in"
 source "package/libevent/Config.in"
 source "package/libev/Config.in"
 source "package/libffi/Config.in"
