Fix missing package dependencies
Declare dependencies in Config.in as required for these packages which
only had their dependencies declared in their .mk files.

Change-Id: Ida0386053ac50ddcba762b32faf190235e1e24d0

--- a/package/golang/go_shanemhansen_gossl/Config.in
+++ b/package/golang/go_shanemhansen_gossl/Config.in
@@ -1,4 +1,5 @@
 config BR2_PACKAGE_GO_SHANEMHANSEN_GOSSL
-        bool "go_shanemhansen_gossl"
-        help
-          Go bindings to the openssl library
+	bool "go_shanemhansen_gossl"
+	select BR2_PACKAGE_OPENSSL
+	help
+	  Go bindings to the openssl library
