--- a/package/google/google_spacecast/Config.in
+++ b/package/google/google_spacecast/Config.in
@@ -16,5 +16,6 @@ config BR2_PACKAGE_GOOGLE_SPACECAST
 	select BR2_PACKAGE_GO_SYS
 	select BR2_PACKAGE_GO_TPM
 	select BR2_PACKAGE_GOOGLE_WIDEVINE_CENC
+	select BR2_PACKAGE_TROUSERS
 	help
 	  Google's Spacecast
