swing prowl from a windcharger to a network box.
move prowl from being a windcharger platform over to being
a network box.  gets us in the more common personality, instead
of the (much) more constrained windcharger personality.

no golang support for ARC, so don't include GCM.

add an init script for platform_gfibertv, which will only be used
on platforms that run the rootfs out of RAM (ala gfrg240).

Change-Id: Ie555ed2bbfa940b817ddf55182d0b6a07bce315b

--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -51,6 +51,8 @@ BR2_PACKAGE_VCONFIG=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_DASH=y
+BR2_PACKAGE_ZSH=y
+BR2_PACKAGE_ZSH_BINARIES_ONLY=y
 BR2_PACKAGE_MODULE_INIT_TOOLS=y
 BR2_PACKAGE_SYSKLOGD=y
 BR2_PACKAGE_UTIL_LINUX=y
@@ -61,7 +63,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_BASE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_HNVRAM=y
 BR2_PACKAGE_GOOGLE_PLATFORM_WAVEGUIDE=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
-BR2_PACKAGE_GOOGLE_WINDCHARGER=y
+BR2_PACKAGE_GOOGLE_NETWORK_BOX=y
 BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA_WPS=y
