--- a/package/google/google_platform/Config.in
+++ b/package/google/google_platform/Config.in
@@ -196,7 +196,7 @@ config BR2_PACKAGE_GOOGLE_NETWORK_BOX
 	select BR2_PACKAGE_PROTOBUF
 	select BR2_PACKAGE_INADYN
 	select BR2_PACKAGE_LIBGLIB2
-	select BR2_PACKAGE_GOOGLE_GCM
+	select BR2_PACKAGE_GOOGLE_GCM if !BR2_arc
 
 config BR2_PACKAGE_GOOGLE_SPACECAST
 	bool "Device can act as Google SpaceCast Box"
