dashsrv: Add a dependency to the dashplayer build.
(In order to facilitate sudu dash injestion.)

Change-Id: Id75d50087fd3db1c4f2d22569c133ef8a478650c

--- a/package/google/google_mcastcapture/Config.in
+++ b/package/google/google_mcastcapture/Config.in
@@ -6,5 +6,7 @@ config BR2_PACKAGE_GOOGLE_MCASTCAPTURE
         select BR2_PACKAGE_PROTOBUF
         select BR2_PACKAGE_LIBEVENT
         select BR2_PACKAGE_LIBXML2
+        # For dashsrv sudu ingestion.
+        select BR2_PACKAGE_GOOGLE_DASHPLAYER
         help
           Builds the mcastcapture sagesrv binary and libptsindex.so library
