dashplayer: Add buildroot config flag for specifying the ARM float ABI.
Our ARM toolchains are compiled with 'soft' floating support. Except
for GFTV254.

However the CPU supports hardware floats.

This change allows for declaring, per hw config, whether the build
should use the softfp float API (BR2_USE_SOFT_FLOAT_ABI). Build files
can then use this information to decide on the correct compiler flags to
pass (the change for this for dashplayer will be in another CL).

Change-Id: I19909fd32080c5540a2ab9b0d572bacf036e5fc6

--- a/configs/gftv254_defconfig
+++ b/configs/gftv254_defconfig
@@ -4,6 +4,9 @@ BR2_DL_DIR="${TOPDIR}/../vendor/opensource/tarballs"
 BR2_CCACHE=y
 BR2_ENABLE_DEBUG=y
 BR2_OPTIMIZE_2=y
+BR2_PREFER_SOFT_FLOAT=n
+BR2_SOFT_FLOAT=n
+BR2_USE_SOFT_FLOAT_ABI=n
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_PATH="${TOPDIR}/../toolchains/bruno_arm"
