--- a/package/google/google_miniclient/Config.in
+++ b/package/google/google_miniclient/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_GOOGLE_MINICLIENT
 	select BR2_PACKAGE_BCM_ROCKFORD
 	select BR2_PACKAGE_GOOGLE_DASHPLAYER
 	select BR2_PACKAGE_GOOGLE_WIDEVINE
+	select BR2_PACKAGE_GOOGLE_WIDEVINE_CENC
 	select BR2_PACKAGE_GOOGLE_HDCP
 	select BR2_PACKAGE_LIBXML2
 	select BR2_PACKAGE_LIBCURL
