Prowl: add quantenna wpa supplicant cli
Change-Id: I04b676bfb0e229c40d57eff0c8d189bc822e57f6

--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -68,6 +68,7 @@ BR2_PACKAGE_HOSTAPD_QUANTENNA=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA=y
 BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA_WPS=y
+BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA_CLI=y
 BR2_PACKAGE_FIRMWARE=y
 BR2_PACKAGE_FIRMWARE_FILENAMES="mrvl/pcie*"
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
