dashsrv: Update deps. Add gflags. Rm dashplayer.
Adds GFlags library for use by dashsrv.
Upgrades GFlags due to build bug blocking kvm build:
  https://github.com/gflags/gflags/issues/101
Add host build for GFlags.
Removes dashplayer which we are not currently using.
Clarify in comment which packages are dashsrv-only.

Change-Id: Ic5a9df9f4986e08767286e5ae7680dfbe7747997

--- a/package/google/google_mcastcapture/Config.in
+++ b/package/google/google_mcastcapture/Config.in
@@ -4,9 +4,9 @@ config BR2_PACKAGE_GOOGLE_MCASTCAPTURE
         select BR2_PACKAGE_OPENSSL
         select BR2_PACKAGE_LIBCURL
         select BR2_PACKAGE_PROTOBUF
+        # Packages used by dashsrv
         select BR2_PACKAGE_LIBEVENT
         select BR2_PACKAGE_LIBXML2
-        # For dashsrv sudu ingestion.
-        select BR2_PACKAGE_GOOGLE_DASHPLAYER
+        select BR2_PACKAGE_GOOGLE_GFLAGS
         help
           Builds the mcastcapture sagesrv binary and libptsindex.so library
