gfrg240: install libubacktrace.so
Needed for Linux perf tool.

Change-Id: Ic1bfc17d43f0f043d89921bdf371b5ef184b61ca

--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -10,7 +10,7 @@ BR2_TOOLCHAIN_EXTERNAL_INET_IPV6=y
 BR2_TOOLCHAIN_EXTERNAL_INET_RPC=y
 BR2_TOOLCHAIN_EXTERNAL_LOCALE=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
-BR2_TOOLCHAIN_EXTRA_EXTERNAL_LIBS="libc.so ld-uClibc libcrypt libresolv librt libpthread libdl libm libutil"
+BR2_TOOLCHAIN_EXTRA_EXTERNAL_LIBS="libc.so ld-uClibc libcrypt libresolv librt libpthread libdl libm libutil libubacktrace"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Google Fiber"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 BR2_ROOTFS_DEVICE_TABLE="/dev/null"
