gflt400: Add Marvell's DEK as buildroot package
Change-Id: Iccee9411401e8abcc1260c0033e4bdcb993b8f44

--- a/configs/gflt400_defconfig
+++ b/configs/gflt400_defconfig
@@ -77,6 +77,7 @@ BR2_PACKAGE_GOOGLE_PRISM=y
 BR2_PACKAGE_CATAWAMPUS=y
 BR2_PACKAGE_MV_APP_PON_TYPE="GPON"
 BR2_PACKAGE_MV_APP=y
+BR2_PACKAGE_DEK_TOOLS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_TARGET_ROOTFS_GINSTALL=y
 BR2_TARGET_ROOTFS_GINSTALL_LOADER_DIR="../loader-bin/marvell"
