Get mobile app telemetry working again.
* run syslogd on gfrg200-family Network Boxes, using minijail to let it
  bind to the actual syslog port.
* advertise syslogd as a Zeroconf (Avahi) service on platforms where
  it runs.
* advertise isoping as a Zeroconf service, too.

This will let mobile devices on the local network find us to run
performance tests and upload results.

Change-Id: I4412575900b78242b9f2acbc6b2a7adb6413a8d2

--- a/configs/gfrg200_defconfig
+++ b/configs/gfrg200_defconfig
@@ -104,6 +104,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_BOUNCER=y
 BR2_PACKAGE_GOOGLE_PLATFORM_CACHE_WARMING=y
 BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_PLATFORM_SYSMGR=y
+BR2_PACKAGE_GOOGLE_PLATFORM_SYSLOG=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_NETWORK_BOX=y
 BR2_PACKAGE_GOOGLE_STORAGE_BOX=y
