--- a/package/Config.in
+++ b/package/Config.in
@@ -377,6 +377,7 @@ source "package/libcares/Config.in"
 source "package/libcgi/Config.in"
 source "package/libcgicc/Config.in"
 source "package/libcurl/Config.in"
+source "package/libcurl_32/Config.in"
 source "package/libdnet/Config.in"
 source "package/libesmtp/Config.in"
 source "package/libeXosip2/Config.in"
