Tweak toolchain path, add vendor/quantenna/drivers
To switch to a quantenna 4.7.0 based kernel from the v37.4.2.89 SDK,
we need to switch over to the 4.8.5 toolchain, which uses a different
path.

Add the vendor/quantenna/drivers standalone package to the image, that
package contains the binary kernel modules from the v37.4.2.89 SDK.

Change-Id: I8d4fe3974c532c350f338e63fbef12ff0bb18b25

--- a/configs/gfrg240_defconfig
+++ b/configs/gfrg240_defconfig
@@ -3,7 +3,7 @@ BR2_DL_DIR="${TOPDIR}/../vendor/opensource/tarballs"
 BR2_JLEVEL=15
 BR2_CCACHE=y
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="${TOPDIR}/../toolchains/quantenna/usr"
+BR2_TOOLCHAIN_EXTERNAL_PATH="${TOPDIR}/../toolchains/quantenna"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arc-linux"
 BR2_TOOLCHAIN_EXTERNAL_LARGEFILE=y
 BR2_TOOLCHAIN_EXTERNAL_INET_IPV6=y
@@ -57,6 +57,7 @@ BR2_PACKAGE_GOOGLE_PLATFORM_LOGUPLOAD=y
 BR2_PACKAGE_GOOGLE_TEST=y
 BR2_PACKAGE_GOOGLE_NETWORK_BOX=y
 BR2_PACKAGE_CATAWAMPUS=y
+BR2_PACKAGE_QUANTENNA_DRIVERS_STANDALONE=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA=y
 BR2_PACKAGE_HOSTAPD_QUANTENNA_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_QUANTENNA=y
