Add glfw_dart and gl_dart to depends
Mark only as building on mipsel

Change-Id: I7b981fd3f1b071d407256a26ced885c37fecd5b6

--- a/package/google/google_oregano_native/Config.in
+++ b/package/google/google_oregano_native/Config.in
@@ -1,5 +1,7 @@
 config BR2_PACKAGE_GOOGLE_OREGANO_NATIVE
 	bool "google_oregano_native"
 	select BR2_PACKAGE_GOOGLE_DART_VM
+	select BR2_PACKAGE_GOOGLE_GL_DART if BR2_mipsel
+	select BR2_PACKAGE_GOOGLE_GLFW_DART if BR2_mipsel
 	help
 	  Native extensions for Oregano projects.
