--- a/package/google/google_glfw_dart/Config.in
+++ b/package/google/google_glfw_dart/Config.in
@@ -3,5 +3,6 @@ config BR2_PACKAGE_GOOGLE_GLFW_DART
   select BR2_PACKAGE_BCM_COMMON
   select BR2_PACKAGE_GOOGLE_GLFW_NEXUS
   select BR2_PACKAGE_GOOGLE_DART_VM
+  depends on BR2_PACKAGE_GOOGLE_MINICLIENT
 	help
           Builds the Dart GLFW bindings
