--- a/package/google/google_glfw_nexus/Config.in
+++ b/package/google/google_glfw_nexus/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_GOOGLE_GLFW_NEXUS
         bool "google_glfw_nexus"
 	select BR2_PACKAGE_BCM_ROCKFORD
+	depends on BR2_PACKAGE_GOOGLE_MINICLIENT
 	help
           Builds the GLFW with Nexus backend
