Make quantenna_drivers depend on !platform_only for now.
Quantenna drivers are not released, so you can't build an openbox build with
them enabled.  This works around the problem temporarily.  b/33070819

Change-Id: I1ec85f3cb4f4cc74f209a159524f214e01f6e0aa

--- a/package/quantenna_drivers/Config.in
+++ b/package/quantenna_drivers/Config.in
@@ -8,13 +8,16 @@ choice
 
 	config BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_HOST
 		bool "PCIe host"
+		depends on !BR2_PACKAGE_GOOGLE_PLATFORM_ONLY
 		select BR2_PACKAGE_QUANTENNA_DRIVERS
 
 	config BR2_PACKAGE_QUANTENNA_DRIVERS_PCIE_MODULE
 		bool "PCIe module"
+		depends on !BR2_PACKAGE_GOOGLE_PLATFORM_ONLY
 		select BR2_PACKAGE_QUANTENNA_DRIVERS
 
 	config BR2_PACKAGE_QUANTENNA_DRIVERS_STANDALONE
 		bool "Standalone"
+		depends on !BR2_PACKAGE_GOOGLE_PLATFORM_ONLY
 		select BR2_PACKAGE_QUANTENNA_DRIVERS
 endchoice
